updating resource file

--- a/pp_home/resources.cfg
+++ b/pp_home/resources.cfg
@@ -100,7 +100,7 @@ m03 = Stopping....
 
 [imageplayer]
 # when user presses the pause button
-m01 = PAUSED.......
+m01 = PAUSED...
 
 # NOT USED when an image track is not found (probably because it is being changed during the running of a mediashow)
 m02 =
@@ -109,4 +109,4 @@ m02 =
 
 [pageplayer]
 # when user presses the pause button
-m01 = PAUSED.......
+m01 = PAUSED...
